@@ -1,3 +1,8 @@
+2002-05-21  Dave Brolley  <brolley@redhat.com>
+
+	* decode.scm (-opcode-slots): Don't consider bits beyond the length of
+	the insn.
+
 2002-05-17  Johan Rydberg  <jrydberg@rtmk.org>
 
 	* cpu/powerpc.cpu: New file.
